# docker-static-cluster

./: .gitignore  README.md  poetry.lock.license  pyproject.toml
src/clustered_5s/: __init__.py  cantgetno.py  schemas.py
src/docker_static_cluster/: __init__.py  cantgetno.py  schemas.py
