[project]
name = "clustered-5s"
version = "0.1.0"
description = "Abstraction over Docker Swarm mode that's simpler than k8s for homelabing"
authors = [
    {name = "Lazerbeak12345",email = "Lazerbeak12345@users.noreply.github.com"}
]
license = {text = "AGPL-v3-or-later"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "jq (>=1.8.0,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "tomli (>=2.2.1,<3.0.0)"
]

[project.scripts]
clustered_5s = "clustered_5s:main"

[tool.poetry]
packages = [{include = "clustered_5s", from = "src"}]


[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20250516"
types-docker = "^7.1.0.20250523"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
