# SPDX-FileCopyrightText: 2025 2025
# SPDX-FileContributor: Nathan Fritzler
#
# SPDX-License-Identifier: MIT

[project]
name = "docker-static-cluster"
version = "0.1.0"
description = "Abstraction over Docker Swarm mode that's simpler than k8s for homelabing"
authors = [
    {name = "Lazerbeak12345",email = "Lazerbeak12345@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "jq (>=1.8.0,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    # TODO: at time of writing, this was the only way to get the package
    "docker-sdp @ https://github.com/neuroforgede/docker-stack-deploy/archive/refs/tags/0.2.13.zip"
]

[project.scripts]
docker_static_cluster = "docker_static_cluster:main"
docker_sc = "docker_static_cluster:main"

[tool.poetry]
packages = [{include = "docker_static_cluster", from = "src"}]


[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20250516"
types-docker = "^7.1.0.20250523"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
